name:                coupon-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alaudiadae/coupon-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          alaudiadae@gmx.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Api,
                       App,
                       Coupon,
                       Models,
                       SwaggerGen
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , servant
                     , servant-server
                     , servant-swagger
                     , string-conversions
                     , swagger2
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

executable coupon-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coupon-servant
  default-language:    Haskell2010

test-suite coupon-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , coupon-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/coupon-servant
